改进了一些模型
